# Researcher

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.yml  config.yml  pyproject.toml  sample.env
src/researcher/: __init__.py  config.py  main.py  prompts.py  snapshot_operations.py  web_operations.py
tests/: __init__.py  test_config.py  test_main.py
